--- a/css/style.css
+++ b/css/style.css
@@ -142,10 +142,11 @@ body {
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     background: transparent no-repeat center center;
     background-size: 100% 100%;
+    background-color: rgb(228, 195, 7);
   }
   
   .carousel-control-prev-icon {
