--- a/css/style.css
+++ b/css/style.css
@@ -303,9 +303,10 @@ table {
 }
 .menu-icon
 {
-    color: #fff;
-    font-size: 30px;
-    margin-top: 30px;
+    color: rgb(136, 11, 119);
+    font-size: 50px;
+    margin-top: 20px;
+    margin-right: 20px;
     cursor: pointer;
 }
 
